Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-11-10 (SVN):
    * hw_utils/hwmaster: Removed two unnecessary NULL assignments after
      freeing a pointer.
    * hw_utils/hwmquery: Fixed a compiler warning in 64 bit due to ssize_t.

2011-11-09 (SVN):
    * quakedef.h: updated beta date stamp to 2011-11-09.
    * hw_utils/hwmaster: Removed the unnecessary registered server counting
      code from Mst_SendList(). In protocol.h, renamed M2C_MASTER_REPLY to
      M2C_SERVERLST, added A2S_ECHO from the engine side header to be in
      sync with it, removed the unused A2A_ECHO, A2M_LIST and M2A_SENDLIST
      macros.
    * hw_utils/hwmquery: Cleaned up. Fixed broken logic that would prevent
      all the servers received from hwmaster being displayed. Renamed the
      M2C_MASTER_REPLY macro to M2C_SERVERLST to be in sync with hwmaster.
      Incremented the version number to 0.2.3.
    * hwutils/hwrcon: Removed USE_HUFFMAN ifdefs which haven't been used to
      this day.

2011-11-07 (SVN):
    * gtk-launcher: Removed the extra '&' before the array variable `info'
      when passing it to fread() as the buffer in scan_pak_files(). Allowed
      the "scanning for mods" console prints only for DEBUG builds. Several
      minor cleanups.

2011-11-06 (SVN):
    * gtk-launcher: Removed needless gtk_widget_ref() and gtk_widget_show()
      calls for GtkEntry widgets which are already part of GtkCombo widgets.
      Seems like copy/paste errors.  Also removed unnecessary vars pointing
      to such widgets.

2011-11-05 (SVN):
    * gtk-launcher: Removed an unused variable from create_window2().
    * gtk-launcher: Replaced gtk_editable_get_chars() usage by the more
      convenient gtk_entry_get_text().
    * gtk-launcher: Removed evil code trying to understand the selection
      in a combo box, properly used gtk_list_child_position() everywhere,
      instead.
    * gtk-launcher: Removed the evil "lock" variable and properly used